--- a/projectServis/index.html
+++ b/projectServis/index.html
@@ -20,14 +20,14 @@
 
                 </div>
                 <nav class="header-nav">
-                    <a href="../projectMain/index.html" class="header-nav__logo">
+                    <a href="../index.html" class="header-nav__logo">
                         <img src="./src/img/HIW/logo.png" alt="" class="header-nav__img">
                     </a>
                     <div class="header-nav__menu">
-                        <a href="../projectMain/index.html" class="header-nav__menu-item">Главная</a>
+                        <a href="../index.html" class="header-nav__menu-item">Главная</a>
                         <a href="../projectAbout/index.html" class="header-nav__menu-item">О компании</a>
-                        <a href="../projectServices2/index.html" class="header-nav__menu-item">Услуги</a>
-                        <a href="../projectServices/index.html" class="header-nav__menu-item">Реализованные  проекты</a>
+                        <a href="../projectServis/index.html" class="header-nav__menu-item">Услуги</a>
+                        <a href="../projectProject/index.html" class="header-nav__menu-item">Реализованные  проекты</a>
                         <a href="../projectLicensec/index.html" class="header-nav__menu-item">нормативные документы</a>
                         <a href="../projectReviews — копия/index.html" class="header-nav__menu-item">Наука</a>
                         <a href="../projectContacts/index.html" class="header-nav__menu-item">Контакты</a>
