--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 </picture>
                                 <div class="grid-item__tittle">
 
-                                    Оценка пожарного риска
+                                    Оценка пожарного риска!
 
                                 </div>
                             </div>
