--- a/index.html
+++ b/index.html
@@ -274,11 +274,27 @@
         </section>
         <section class="map">
             <div class="container">
-                <div class="contacts__info_map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8522.87229046989!2d76.88361475241163!3d43.231590763875836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3883691b0d18784f%3A0xe0cc2322e1c8ede7!2z0YPQu9C40YbQsCDQldCz0LjQt9Cx0LDQtdCy0LAgNTTQsSwg0JDQu9C80LDRgtGLIDA1MDAwMCwg0JrQsNC30LDRhdGB0YLQsNC9!5e0!3m2!1sru!2skg!4v1655641827748!5m2!1sru!2skg"
-                        width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="map__cont">
+                    <div class="map__cont_main"> 
+                        <object data="./src/img/map/1.svg" type="" class="map__cont_main-img"></object>
+                        <object data="./src/img/map/2.svg" type="" class="map__cont_main-img1"></object>
+                        <object data="./src/img/map/3.svg" type="" class="map__cont_main-img2"></object>
+                        <object data="./src/img/map/4.svg" type="" class="map__cont_main-img3"></object>
+                        <object data="./src/img/map/5.svg" type="" class="map__cont_main-img4"></object>
+                        <object data="./src/img/map/6.svg" type="" class="map__cont_main-img5"></object>
+                        <object data="./src/img/map/7.svg" type="" class="map__cont_main-img6"></object>
+                        <object data="./src/img/map/8.svg" type="" class="map__cont_main-img7"></object>
+                        <object data="./src/img/map/9.svg" type="" class="map__cont_main-img8"></object>
+                        <object data="./src/img/map/10.svg" type="" class="map__cont_main-img9"></object>
+                        <object data="./src/img/map/11.svg" type="" class="map__cont_main-img10"></object>
+                        <object data="./src/img/map/12.svg" type="" class="map__cont_main-img11"></object>
+                        <object data="./src/img/map/13.svg" type="" class="map__cont_main-img12"></object>
+                        <object data="./src/img/map/14.svg" type="" class="map__cont_main-img13"></object>
+                        <object data="./src/img/map/15.svg" type="" class="map__cont_main-img14"></object>
+                        <object data="./src/img/map/16.svg" type="" class="map__cont_main-img15"></object>
+                        <object data="./src/img/map/17.svg" type="" class="map__cont_main-img16"></object>
+                        <object data="./src/img/map/18.svg" type="" class="map__cont_main-img17"></object>
+                    </div>
                 </div>
             </div>
         </section>
