--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
-<body style="opacity:0;transition:all .5s ease;">
+<body style="opacity:0; transition: all .5s ease;">
     <header class="header"> 
-        <div class="cont"></div>
+        <div class="cont">
+            
+        </div>
         <div class="header_dark">
             <div class="container">
                 <div class="navigation" id="navigation">
@@ -73,9 +75,7 @@
                                         <li><a href="">2. Производственного назначения</a></li>
                                     </ul>
                                 </li>
-
                             </ul>
-
                             <a href="./projectLicensec/index.html" class="header-nav__menu-item">нормативные
                                 документы</a>
                             <a href="./projectReviews — копия/index.html" class="header-nav__menu-item">Наука</a>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="header__info">
-                <div class="header__info-title">GLOBAL FIRE PROTECTION</div>
+                <div class="header__info-title">  GLOBAL FIRE PROTECTION</div>
                 <div class="header__info-subtitle">ПОЖАРНАЯ БЕЗОПАСНОСТЬ</div>
             </div>
             <a href="" class="header__info-btn">
@@ -106,7 +106,7 @@
                 </div>
                 <div class="gallery-grid">
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis/projectServis1/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/1.webp" type="image/webp">
@@ -119,7 +119,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis/projectServis2/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/2.webp" type="image/webp">
@@ -133,7 +133,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis/projectServis3/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/32.webp" type="image/webp">
@@ -147,7 +147,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis/projectServis4/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/31.webp" type="image/webp">
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis/projectServis5/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/5.webp" type="image/webp">
@@ -177,7 +177,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis/projectServis6/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/9.webp" type="image/webp">
@@ -194,7 +194,7 @@
                     </div>
                     <div id="grid-item-hidden" class="gallery-grid grid-item__hidden">
                         <div class="grid-item">
-                            <a href="">
+                            <a href="./projectServis/projectServis7/index.html">
                                 <div class="grid-item__inner">
                                     <picture>
                                         <source srcset="./src/img/7.webp" type="image/webp">
@@ -210,7 +210,7 @@
                             </a>
                         </div>
                         <div class="grid-item">
-                            <a href="">
+                            <a href="./projectServis/projectServis8/index.html">
                                 <div class="grid-item__inner">
                                     <picture>
                                         <source srcset="./src/img/8.webp" type="image/webp">
@@ -225,7 +225,7 @@
                             </a>
                         </div>
                         <div class="grid-item">
-                            <a href="">
+                            <a href="./projectServis/projectServis9/index.html">
                                 <div class="grid-item__inner">
                                     <picture>
                                         <source srcset="./src/img/6.webp" type="image/webp">
