--- a/projectAbout/index.html
+++ b/projectAbout/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body style="opacity:0;transition:all .5s ease;">
-    <header class="header"> 
+   <header class="header"> 
         <div class="cont"></div>
         <div class="header_dark">
             <div class="container">
@@ -26,7 +26,7 @@
 
                     </div>
                     <nav class="header-nav">
-                        <a href="./index.html" class="header-nav__logo">
+                        <a href="../index.html" class="header-nav__logo">
                             <picture>
                                 <source srcset="./src/img/HIW/logo.webp" type="image/webp">
                                <img src="./src/img/HIW/logo.png" alt="" class="header-nav__img"> 
@@ -38,7 +38,7 @@
                         </a>
                         <div class="header-nav__menu">
                             <a href="../index.html" class="header-nav__menu-item">Главная</a>
-                            <a href="#" class="header-nav__menu-item">О компании</a>
+                            <a href="../projectAbout/index.html" class="header-nav__menu-item">О компании</a>
                             <ul>
                                 <li>
                                     <a href="../projectServis/index.html" class="header-nav__menu-item">Услуги <i
@@ -56,7 +56,7 @@
                                                 безопасности» (ППМ)</a></li>
                                         <li><a href="../projectServis/projectServis7/index.html">7 Разработка раздела проекта Система обеспечения комплексной
                                                 безопасности и антитеррористической защищенности</a></li>
-                                        <li><a href="./projectServis/projectServis8/index.html">8 Разработка раздела проекта Инженерно-технические мероприятия по
+                                        <li><a href="../projectServis/projectServis8/index.html">8 Разработка раздела проекта Инженерно-технические мероприятия по
                                                 гражданской обороне (ИТМ ГО)</a></li>
                                         <li><a href="../projectServis/projectServis9/index.html">9 Определение категорий по взрыво-пожарной опасности</a></li>
                                     </ul>
@@ -82,9 +82,7 @@
                         </div>
                     </nav>
                 </div>
-                <div class="burger">
-                    <span class="burger__line"></span>
-                </div>
+                
             </div>
             <div class="header__info">
                 <div class="header__info-title">GLOBAL FIRE PROTECTION</div>
