--- a/projectLicensec/index.html
+++ b/projectLicensec/index.html
@@ -75,9 +75,9 @@
 
                             </ul>
 
-                            <a href="../projectLicensec/index.html" class="header-nav__menu-item">нормативные
+                            <a href="#" class="header-nav__menu-item">нормативные
                                 документы</a>
-                            <a href="#" class="header-nav__menu-item">Наука</a>
+                            <a href="../projectReviews — копия/index.html" class="header-nav__menu-item">Наука</a>
                             <a href="../projectContacts/index.html" class="header-nav__menu-item">Контакты</a>
                         </div>
                     </nav>
