--- a/projectServis/index.html
+++ b/projectServis/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="gallery-grid">
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis1/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/1.webp" type="image/webp">
@@ -104,7 +104,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis2/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/2.webp" type="image/webp">
@@ -119,7 +119,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis3/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/32.webp" type="image/webp">
@@ -134,7 +134,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis4/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/31.webp" type="image/webp">
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis5/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/5.webp" type="image/webp">
@@ -164,7 +164,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis6/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/9.webp" type="image/webp">
@@ -179,7 +179,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis7/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/7.webp" type="image/webp">
@@ -194,7 +194,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis8/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/8.webp" type="image/webp">
@@ -209,7 +209,7 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <a href="">
+                        <a href="./projectServis9/index.html">
                             <div class="grid-item__inner">
                                 <picture>
                                     <source srcset="./src/img/6.webp" type="image/webp">
@@ -229,36 +229,54 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer__info">
-                <div class="footer__info_img">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8522.87229046989!2d76.88361475241163!3d43.231590763875836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3883691b0d18784f%3A0xe0cc2322e1c8ede7!2z0YPQu9C40YbQsCDQldCz0LjQt9Cx0LDQtdCy0LAgNTTQsSwg0JDQu9C80LDRgtGLIDA1MDAwMCwg0JrQsNC30LDRhdGB0YLQsNC9!5e0!3m2!1sru!2skg!4v1655641827748!5m2!1sru!2skg" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div  class="footer__info_text">
-                    <div class="footer__info_text-item">
-                        Республика Казахстан г. Алматы,
-                    </div>
-                    <div class="footer__info_text-item">
-                        Егизбаева 54 б, офис 322
-                    </div>
-                    <div class="footer__info_text-item">
-                        gfp_office@mail.ru
-                    </div>
-                    <div class="footer__info_text-item">
-                        +7 (727) 394 01 11
-                    </div>
-                    <div class="footer__info_text-item">
-                        +7 777 954 14 44
-                    </div>
-                    <div class="footer__info_text-item">
-                        +7 707 327 27 66
-                    </div>
-                    <div class="footer__info_text-item">
-                        +7 705 807 71 04
+            <div class="footer__inner">
+                <div class="footer__inner-item">
+                    <div class="footer__inner-item_img">
+                        <picture>
+                            <source srcset="./src/img/HIW/logo.png" type="image/webp">
+                            <img src="./src/img/HIW/logo.png" alt="" class="footer__inner-item_img-img">
+                        </picture>
                     </div>
                 </div>
+                <div class="footer__inner-item">
+                    <div class="footer__inner-item_contacts">
+                        <div class="footer__info_text-item">
+                            Республика Казахстан г. Алматы,
+                        </div>
+                        <div class="footer__info_text-item">
+                            Егизбаева 54 б, офис 322
+                        </div>
+                        <div class="footer__info_text-item">
+                            gfp_office@mail.ru
+                        </div>
+                        <div class="footer__info_text-item">
+                            +7 (727) 394 01 11
+                        </div>
+                        <div class="footer__info_text-item">
+                            +7 777 954 14 44
+                        </div>
+                        <div class="footer__info_text-item">
+                            +7 707 327 27 66
+                        </div>
+                        <div class="footer__info_text-item">
+                            +7 705 807 71 04
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__inner-item">
+                    <div class="footer__inner-item_map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8522.87229046989!2d76.88361475241163!3d43.231590763875836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3883691b0d18784f%3A0xe0cc2322e1c8ede7!2z0YPQu9C40YbQsCDQldCz0LjQt9Cx0LDQtdCy0LAgNTTQsSwg0JDQu9C80LDRgtGLIDA1MDAwMCwg0JrQsNC30LDRhdGB0YLQsNC9!5e0!3m2!1sru!2skg!4v1655641827748!5m2!1sru!2skg"
+                            width="600" height="270" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                </div>
+                <a href="#" class="back-to-top"></a>
             </div>
         </div>
-    </footer> 
+        <div class="footer__copyright">© TOO «Global Fire Protection», 2022</div>
+    </footer>
     
     <script src="./src/libs/jquery/jquery.js"></script>
     <script src="./src/libs/owl/owl.carousel.min.js"></script>
