--- a/projectContacts/index.html
+++ b/projectContacts/index.html
@@ -126,11 +126,22 @@
         <section class="contacts">
             <div class="container">
                 <div class="contacts__text">Форма для связи</div>
-                <div class="contacts__info">
-                    <div class="contacts__info_map">
-                        
-                    </div>
-                </div>
+                <h2>Контактная форма</h2>
+		<div class="form-container">
+			<div class="note"></div>
+			<div class="fields">
+				<form class="ajax-contact-form" action="">
+					<p><input type="text" name="name" value="" placeholder="Имя"></p>
+					<div class="row">
+						<div class="col"><input type="tel" name="tel" value="" placeholder="Телефон"></div>
+						<div class="col"><input type="email" name="email" value="" placeholder="E-mail"></div>
+						</div>
+					<label>Текст</label>
+					<textarea name="message" cols="40" rows="3"></textarea>
+					<input type="submit" name="submit" class="form-container__btn" value="Отправить">
+				</form>
+			</div>
+		</div>
             </div>
             </div>
         </section>
