--- a/projectContacts/index.html
+++ b/projectContacts/index.html
@@ -26,7 +26,7 @@
 
                     </div>
                     <nav class="header-nav">
-                        <a href="./index.html" class="header-nav__logo">
+                        <a href="../index.html" class="header-nav__logo">
                             <picture>
                                 <source srcset="./src/img/HIW/logo.webp" type="image/webp">
                                 <img src="./src/img/HIW/logo.png" alt="" class="header-nav__img">
@@ -107,7 +107,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="contacts1">
+        <!-- <section class="contacts1">
             <div class="contacts1__title">
                 Контакты
             </div>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="section-form">
             <div class="container">
                 <div class="wrapper">
