--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <ul>
                                 <li>
                                     <a href="./projectServis/index.html" class="header-nav__menu-item">Услуги <i
-                                            class="fa-solid fa-chevron-down" id="down"></i> </a>
+                                            class="fa-solid fa-chevron-down down"></i> </a>
                                     <ul>
                                         <li><a href="./projectServis/projectServis1/index.html">1 Разработка специальных технических условий</a></li>
                                         <li><a href="./projectServis/projectServis2/index.html">2 Проектирование систем автоматического пожаротушения,
@@ -69,7 +69,7 @@
                             <ul>
                                 <li>
                                     <a href="./projectProject/index.html" class="header-nav__menu-item">Реализованные
-                                        проекты <i class="fa-solid fa-chevron-down" id="down"></i></a>
+                                        проекты <i class="fa-solid fa-chevron-down down" ></i></a>
                                     <ul>
                                         <li><a href="./projectProject/projectProject1/index.html">1. Жилищно-гражданского назначения</a></li>
                                         <li><a href="./projectProject/projectProject2/index.html">2. Производственного назначения</a></li>
@@ -792,7 +792,32 @@
         </div>
         <div class="footer__copyright">© TOO «Global Fire Protection», 2022</div>
     </footer>
-
+<div class="overlay">
+    <div class="popup">
+        <div class="wrapper">
+            <h2 class="tittle-h2 text-center">
+                Напишите нам
+            </h2>
+            <p class="after-tittle text-center">
+                Мы с вами свяжемся
+            </p>
+            <div class="form-container">
+                <div class="note"></div>
+                <div class="fields">
+                    <form class="form" action="">
+                        <input class="form__input" name="name" type="text" placeholder="Имя*">
+                        <input class="form__input" name="email" type="email" placeholder="E-mail*">
+                        <textarea class="form__textarea" name="message" placeholder="Cообщение*"></textarea>
+                        <input type="submit" name="submit" class="form-container__btn btn" value="Отправить сообщение">
+                    </form>
+                    <div class="popup-close">
+                        <span class="popup-close__line"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     <script src="./src/libs/jquery/jquery.js"></script>
     <script src="./src/libs/owl/owl.carousel.min.js"></script>
     <script src="./src/js/bootstrap.bundle.min.js"></script>
