--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             </div>
         </section>
         <section class="reviews">
-            <div class="container">
+            <div class="container1">
                 <div class="reviews__title">Реализованные проекты</div>
                 <div class="slider1">
                     <div class="slide-track1">
@@ -720,7 +720,7 @@
             </div>
         </section>
         <section class="tasks">
-            <div class="container">
+            <div class="container1">
                 <div class="tasks__title">Партнеры</div>
                 <div class="slider">
                     <div class="slide-track">
@@ -806,8 +806,10 @@
                 <div class="fields">
                     <form class="form" action="">
                         <input class="form__input" name="name" type="text" placeholder="Имя*">
+                        <input class="form__input" name="namecompany" type="text" placeholder="Компания*">
+                        <input class="form__input" name="tel" type="tel" value="" placeholder="Номер телефона*">
                         <input class="form__input" name="email" type="email" placeholder="E-mail*">
-                        <textarea class="form__textarea" name="message" placeholder="Cообщение*"></textarea>
+                        <textarea class="form__textarea" name="message" placeholder="Вопрос*"></textarea>
                         <input type="submit" name="submit" class="form-container__btn btn" value="Отправить сообщение">
                     </form>
                     <div class="popup-close">
