--- a/index.html
+++ b/index.html
@@ -77,12 +77,22 @@
                                 документы</a>
                             <a href="./projectReviews — копия/index.html" class="header-nav__menu-item">Наука</a>
                             <a href="./projectContacts/index.html" class="header-nav__menu-item">Контакты</a>
+                            <div class="header__contacts2">
+                                 <a href="tel:+77273940111" class="header__contacts_item">+7
+                                    (727)
+                                    394 01 11</a> <hr> <a href="tel:+77779541444" class="header__contacts_item">+7 777 954 14 44</a>
+                                    <hr>
+                                <a href="tel:+77073272766" class="header__contacts_item">+7 707 327 27 66</a> <hr> <a
+                                    href="tel:+77058077104" class="header__contacts_item">+7 705 807 71 04</a>
+        
+                            </div>
+                        </div>
+                        <div class="burger">
+                            <div class="burger__line"></div>
                         </div>
                     </nav>
                 </div>
-                <div class="burger">
-                    <span class="burger__line"></span>
-                </div>
+                
             </div>
             <div class="header__info">
                 <div class="header__info-title">  GLOBAL FIRE PROTECTION</div>
@@ -830,6 +840,7 @@
         </div>
     </div>
 </div>
+<a href="https://metrika.yandex.ru/stat/?id=45906453&amp;from=informer" target="_blank" rel="nofollow"><img class="ym-advanced-informer" style="width: 88px; height: 31px; border: 0;" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" src="https://informer.yandex.ru/informer/45906453/3_1_FFFFFFFF_EFEFEFFF_0_pageviews" alt="Яндекс.Метрика" data-cid="45906453" data-lang="ru"></a>
     <script src="./src/libs/jquery/jquery.js"></script>
     <script src="./src/libs/owl/owl.carousel.min.js"></script>
     <script src="./src/js/bootstrap.bundle.min.js"></script>
