Changed background of each service page.

--- a/projectServis/projectServis1/index.html
+++ b/projectServis/projectServis1/index.html
@@ -78,10 +78,10 @@
             </a>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="service-content">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text" id="service-content_title">
                     Разработка специальных технических условий в Казахстане
                 </div>
                 <div class="home__cont">
