--- a/projectServis/projectServis2/index.html
+++ b/projectServis/projectServis2/index.html
@@ -93,10 +93,10 @@
             </a>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="service-content">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text" id="service-content_title">
                     Проектирование систем автоматического пожаротушения, автоматической пожарной сигнализации и
                     оповещения о пожаре
                 </div>
