--- a/projectServis/projectServis3/index.html
+++ b/projectServis/projectServis3/index.html
@@ -95,10 +95,10 @@
             </a>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="service-content">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text" id="service-content_title">
                     Консультация по вопросам пожарной безопасности при проектировании зданий и сооружений
                 </div>
                 <div class="home__cont">
