--- a/projectServis/projectServis7/index.html
+++ b/projectServis/projectServis7/index.html
@@ -95,10 +95,10 @@
             </a>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="service-content">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text" id="service-content_title">
                     Разработка раздела: «Система обеспечения комплексной безопасности и антитеррористической защищенности для особо важных объектов, большепролетных сооружений и высотных зданий, их комплексов»
                 </div>
                 <div class="home__cont">
