--- a/projectServis/projectServis4/index.html
+++ b/projectServis/projectServis4/index.html
@@ -95,10 +95,10 @@
             </a>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="service-content">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text" id="service-content_title">
                     Расчет времени эвакуации людей при пожаре и моделирование опасных факторов пожара
                 </div>
                 <div class="home__cont">
