--- a/projectServis/projectServis8/index.html
+++ b/projectServis/projectServis8/index.html
@@ -102,10 +102,10 @@
             </a>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="service-content">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text" id="service-content_title">
                     Разработка раздела проектной документации «Инженерно-технические мероприятия гражданской обороны.
                     Мероприятия по предупреждению чрезвычайных ситуаций» (ИТМ ГО)
                 </div>
