--- a/projectServis/projectServis9/index.html
+++ b/projectServis/projectServis9/index.html
@@ -102,10 +102,10 @@
             </a>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="service-content">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text" id="service-content_title">
                     Расчет категорий на предмет определения взрывопожарной и пожарной опасности
                 </div>
                 <div class="home__cont">
