added background video to the page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
 <body style="opacity:0; transition: all .5s ease;">
     <header class="header"> 
+        <video autoplay muted loop id="videoBackground">
+            <source src="./src/video/bg.mp4">
+        </video>
         <div class="cont">
-            
+            <div id="blackscreenVideo"></div>
         </div>
         <div class="header_dark">
             <div class="container">
@@ -92,7 +95,6 @@
                         </div>
                     </nav>
                 </div>
-                
             </div>
             <div class="header__info">
                 <div class="header__info-title">  GLOBAL FIRE PROTECTION</div>
